--- a/hospital-ui/src/app/modules/csr/pages/send-csr-form/send-csr-form.component.html
+++ b/hospital-ui/src/app/modules/csr/pages/send-csr-form/send-csr-form.component.html
@@ -1,4 +1,3 @@
-
 <div class="p-grid p-mt-6 p-justify-center centered-grid"></div>
 <div class="p-grid p-mt-6 p-justify-center centered-grid"></div>
 <div class="p-grid p-mt-6 p-justify-center centered-grid">
@@ -22,7 +21,7 @@
               Common name:
             </label>
             <div>
-              <input type="name" autocomplete="off" pInputText
+              <input type="name" autocomplete="off" pInputText formControlName="commonName"
                 class="form-control " [ngClass]="{ 'is-invalid': submitted && f.commonName.errors }" />
             </div>
           </span>
@@ -31,7 +30,7 @@
               Given name:
             </label>
             <div>
-              <input type="name" autocomplete="off" pInputText
+              <input type="name" autocomplete="off" pInputText formControlName="givenName"
                 class="form-control " [ngClass]="{ 'is-invalid': submitted && f.givenName.errors }" />
             </div>
           </span>
@@ -40,7 +39,7 @@
               Surname:
             </label>
             <div>
-              <input type="name" autocomplete="off" pInputText
+              <input type="name" autocomplete="off" pInputText formControlName="surname"
                 class="form-control " [ngClass]="{ 'is-invalid': submitted && f.surname.errors }" />
             </div>
           </span>
@@ -49,7 +48,7 @@
             Organization:
             </label>
             <div>
-              <input type="name" autocomplete="off" pInputText
+              <input type="name" autocomplete="off" pInputText formControlName="organization"
                 class="form-control " [ngClass]="{ 'is-invalid': submitted && f.organization.errors }" />
             </div>
           </span>
@@ -58,7 +57,7 @@
               Organization unit:
             </label>
             <div>
-              <input type="name" autocomplete="off" pInputText
+              <input type="name" autocomplete="off" pInputText formControlName="organizationUnit"
                 class="form-control " [ngClass]="{ 'is-invalid': submitted && f.organizationUnit.errors }" />
             </div>
           </span>
@@ -67,7 +66,7 @@
               Country:
             </label>
             <div>
-              <input type="name" autocomplete="off" pInputText
+              <input type="name" autocomplete="off" pInputText formControlName="country"
                 class="form-control " [ngClass]="{ 'is-invalid': submitted && f.country.errors }" />
             </div>
           </span>
@@ -76,7 +75,7 @@
               Email:
             </label>
             <div>
-              <input type="name" autocomplete="off" pInputText
+              <input type="name" autocomplete="off" pInputText formControlName="email"
                 class="form-control " [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
             </div>
           </span>
@@ -85,7 +84,7 @@
               Unique identifier:
             </label>
             <div>
-              <input type="number" min="0" autocomplete="off" pInputText
+              <input type="text"autocomplete="off" pInputText formControlName="uniqueIdentifier"
                 class="form-control " [ngClass]="{ 'is-invalid': submitted && f.uniqueIdentifier.errors }" />
             </div>
           </span>
