--- a/admin-ui/src/app/modules/certificates/pages/certificate-requests/certificate-requests.component.html
+++ b/admin-ui/src/app/modules/certificates/pages/certificate-requests/certificate-requests.component.html
@@ -21,7 +21,7 @@
       <td>{{ csr.countryCode}}</td>
       <td>{{ csr.email}}</td>
       <td>
-        <button (click)="issueCertificate(csr.id)"label="Issue certificate"></button>
+        <button class="p-button" (click)="issueCertificate(csr.id)" label="Issue certificate" pButton></button>
       </td>
     </tr>
   </ng-template>
