--- a/admin-ui/src/app/modules/certificates/pages/certificates/certificates.component.html
+++ b/admin-ui/src/app/modules/certificates/pages/certificates/certificates.component.html
@@ -6,15 +6,25 @@
           <th>CountryCode</th>
           <th>Email</th>
           <th>Organization</th>
+          <th>Start date</th>
+          <th>End date</th>
+          <th>Action</th>
       </tr>
   </ng-template>
   <ng-template pTemplate="body" let-certificate>
       <tr>
           <td>{{certificate.name}}</td>
           <td>{{certificate.surname}}</td>
-          <td>{{certificate.countryCode}</td>
+          <td>{{certificate.countryCode}}</td>
           <td>{{certificate.email}}</td>
           <td>{{certificate.organization}}</td>
+          <td>{{certificate.startDate | date}}</td>
+          <td>{{certificate.endDate | date}}</td>
+          <td >
+              <button *ngIf="!certificate.revoked" pButton label="Revoke">
+              </button>
+            <p *ngIf="certificate.revoked">Certificate revoked!</p>
+        </td>
       </tr>
   </ng-template>
 </p-table>
