Hospital (api/ui) code has been rewritten

--- a/hospital-ui/src/app/modules/csr/pages/send-csr-form/send-csr-form.component.html
+++ b/hospital-ui/src/app/modules/csr/pages/send-csr-form/send-csr-form.component.html
@@ -2,7 +2,7 @@
 <div class="p-grid p-mt-6 p-justify-center centered-grid"></div>
 <div class="p-grid p-mt-6 p-justify-center centered-grid">
   <div class="p-col p-sm-5 p-md-6 p-lg-6">
-    <p-card class="flat-card">
+    <p-card class="flat-card center">
       <div class="p-card-header">
         <div class="p-grid p-justify-center">
           <h1>
@@ -12,88 +12,57 @@
           </h1>
         </div>
       </div>
-      <div class="p-grid p-mt-3 p-justify-center centered-grid"></div>
-      <form id="form" [formGroup]="form" (ngSubmit)="onSubmit()">
-        <div class="p-grid p-px-6 form-group">
-          <div class="p-px-5"></div>
-          <span class="p-field p-col p-mt-4 p-grid">
-            <label class="p-justify-left p-col-2">
-              Common name:
-            </label>
-            <div>
-              <input type="name" autocomplete="off" pInputText formControlName="commonName"
+      <div class="p-card-content centered-grid">
+        <form id="form" [formGroup]="form" (ngSubmit)="onSubmit()">
+          <div class="p-grid p-px-6 form-group">
+            <div class="divider p-px-6"></div>
+            <span class="p-float-label p-col p-mt-4 p-grid">
+              <input id="common-name" type="text" autocomplete="off" pInputText formControlName="commonName"
                 class="form-control " [ngClass]="{ 'is-invalid': submitted && f.commonName.errors }" />
-            </div>
-          </span>
-          <span class="p-field p-col p-mt-4 p-grid">
-            <label class="p-justify-left p-col-2">
-              Given name:
-            </label>
-            <div>
-              <input type="name" autocomplete="off" pInputText formControlName="givenName"
-                class="form-control " [ngClass]="{ 'is-invalid': submitted && f.givenName.errors }" />
-            </div>
-          </span>
-          <span class="p-field p-col p-mt-4 p-grid">
-            <label class="p-justify-left p-col-2">
-              Surname:
-            </label>
-            <div>
-              <input type="name" autocomplete="off" pInputText formControlName="surname"
-                class="form-control " [ngClass]="{ 'is-invalid': submitted && f.surname.errors }" />
-            </div>
-          </span>
-          <span class="p-field p-col p-mt-4 p-grid">
-            <label class="p-justify-left p-col-2">
-            Organization:
-            </label>
-            <div>
-              <input type="name" autocomplete="off" pInputText formControlName="organization"
+              <label for="common-name" class="center p-justify-left p-col-2">Common name</label>
+            </span>
+            <div class="p-px-5"></div>
+            <span class="p-float-label p-col p-mt-4 p-grid">
+              <input id="given-name" type="text" autocomplete="off" pInputText formControlName="givenName" class="form-control "
+                [ngClass]="{ 'is-invalid': submitted && f.givenName.errors }" />
+              <label for="give-name" class="center p-justify-left p-col-2">Given name</label>
+            </span>
+            <span class="p-float-label p-col p-mt-4 p-grid">
+              <input id="surname" type="text" autocomplete="off" pInputText formControlName="surname" class="form-control "
+                [ngClass]="{ 'is-invalid': submitted && f.surname.errors }" />
+              <label for="surname" class="center p-justify-left p-col-2">Surname</label>
+            </span>
+            <span class="p-float-label p-col p-mt-4 p-grid">
+              <input id="organization" type="text" autocomplete="off" pInputText formControlName="organization"
                 class="form-control " [ngClass]="{ 'is-invalid': submitted && f.organization.errors }" />
-            </div>
-          </span>
-          <span class="p-field p-col p-mt-4 p-grid">
-            <label class="p-justify-left p-col-2">
-              Organization unit:
-            </label>
-            <div>
-              <input type="name" autocomplete="off" pInputText formControlName="organizationUnit"
+              <label for="organization" class="center p-justify-left p-col-2">Organization</label>
+            </span>
+            <span class="p-float-label p-col p-mt-4 p-grid">
+              <input id="organization-unit" type="text" autocomplete="off" pInputText formControlName="organizationUnit"
                 class="form-control " [ngClass]="{ 'is-invalid': submitted && f.organizationUnit.errors }" />
-            </div>
-          </span>
-          <span class="p-field p-col p-mt-4 p-grid">
-            <label class="p-justify-left p-col-2">
-              Country:
-            </label>
-            <div>
-              <input type="name" autocomplete="off" pInputText formControlName="country"
-                class="form-control " [ngClass]="{ 'is-invalid': submitted && f.country.errors }" />
-            </div>
-          </span>
-          <span class="p-field p-col p-mt-4 p-grid">
-            <label class="p-justify-left p-col-2">
-              Email:
-            </label>
-            <div>
-              <input type="name" autocomplete="off" pInputText formControlName="email"
-                class="form-control " [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
-            </div>
-          </span>
-          <span class="p-field p-col p-mt-4 p-grid">
-            <label class="p-justify-left p-col-2">
-              Unique identifier:
-            </label>
-            <div>
-              <input type="text"autocomplete="off" pInputText formControlName="uniqueIdentifier"
+              <label for="organization-unit" class="center p-justify-left p-col-2">Organization unit</label>
+            </span>
+            <span class="p-float-label p-col p-mt-4 p-grid">
+              <input id="country" type="text" autocomplete="off" pInputText formControlName="country" class="form-control "
+                [ngClass]="{ 'is-invalid': submitted && f.country.errors }" />
+              <label for="country" class="center p-justify-left p-col-2">Country</label>
+            </span>
+            <span class="p-float-label p-col p-mt-4 p-grid">
+              <input id="email" type="text" autocomplete="off" pInputText formControlName="email" class="form-control "
+                [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
+              <label for="email" class="center p-justify-left p-col-2">Email</label>
+            </span>
+            <span class="p-float-label p-col p-mt-4 p-grid">
+              <input id="unique-identifier" type="text" autocomplete="off" pInputText formControlName="uniqueIdentifier"
                 class="form-control " [ngClass]="{ 'is-invalid': submitted && f.uniqueIdentifier.errors }" />
-            </div>
-          </span>
-        </div>
-        <div class="p-grid p-px-5 p-mt-6 p-justify-center">
-          <button id="send-csr" type="submit" class="p-button" label="Send"
-            pButton></button>
-        </div>
-      </form>
+              <label for="unique-identifier" class="center p-justify-left p-col-2">Unique identifier</label>
+            </span>
+          </div>
+          <div class="p-grid p-px-5 p-mt-6 p-justify-center">
+            <button id="send-csr" type="submit" class="p-button" label="Send" pButton></button>
+          </div>
+        </form>
+      </div>
     </p-card>
   </div>
 </div>
