--- a/web-ui/projects/hospital-ui/src/app/app.component.html
+++ b/web-ui/projects/hospital-ui/src/app/app.component.html
@@ -1,5 +1,4 @@
+<app-header></app-header>
 <main>
   <router-outlet #outlet="outlet"></router-outlet>
 </main>
-
-<!-- <p-toast position="top-left"></p-toast> -->
