--- a/web-ui/projects/hospital-ui/src/app/modules/service-logs/service-log-search/service-log-search.component.scss
+++ b/web-ui/projects/hospital-ui/src/app/modules/service-logs/service-log-search/service-log-search.component.scss
@@ -3,10 +3,14 @@ td {
 }
 
 .center {
-    text-align: center;
-    width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .divider {
   border-top: 3px;
+}
+.margin {
+  margin-left: auto;
+  margin-right: 0
 }
