--- a/web-ui/projects/hospital-ui/src/app/modules/service-log-alarm/service-log-alarms/service-log-alarms.component.html
+++ b/web-ui/projects/hospital-ui/src/app/modules/service-log-alarm/service-log-alarms/service-log-alarms.component.html
@@ -28,7 +28,7 @@
             </ng-template>
             <ng-template pTemplate="body" let-alarm>
               <tr>
-                <td>{{ alarm.time }}</td>
+                <td>{{ alarm.time | date }}</td>
                 <td>{{ alarm.severity }}</td>
                 <td>{{ alarm.message }}</td>
                 <td>{{ alarm.type }}</td>
