--- a/web-ui/projects/hospital-ui/src/app/modules/reports/pages/reports/reports.component.html
+++ b/web-ui/projects/hospital-ui/src/app/modules/reports/pages/reports/reports.component.html
@@ -1,17 +1,17 @@
 
 <div class="p-grid p-fluid">
   <div class="p-col-6 p-md-6">
-    <p-card header="Service Logs Report">
-      <h3>Total logs:</h3>
-      <h3>Total logs last month:</h3>
+    <p-card header="Service Logs Report" *ngIf="serviceLogReport">
+      <h3>Total logs: {{serviceLogReport.totalLogs}}</h3>
+      <h3>Total logs last month: {{serviceLogReport.totalLogsLastMonth}}</h3>
     </p-card>
   </div>
 
-  <div class="p-col-6 p-md-6">
+  <div class="p-col-6 p-md-6" *ngIf="serviceLogReport">
     <p-chart type="polarArea" [data]="data" width="350px" height="350px"></p-chart>
   </div>
 
-  <div class="p-col-6 p-md-10">
+  <div class="p-col-6 p-md-10" *ngIf="chartAlarmData">
     <p-card header="Alarms per day (Service log alarm)">
       <h5>Basic</h5>
       <p-chart type="line" [data]="basicData" [options]="basicOptions"></p-chart>
